...
        android:textStyle="bold"
        android:id="@+id/appNameTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:background="@color/colorTextBackground"
        android:layout_above="@+id/exploreButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="Which City do you want to Explore?"
        android:layout_centerHorizontal="true" />

    <Button
...
